# Ai_assistant

./: .gitignore  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  README.md  SETUP.md  VERIFICATION_REPORT.md  app.js  app.yaml  docker-compose.yml  index.html  render.yaml
backend/: .env.example  .gitignore  config.py  main.py  pyproject.toml  requirements.txt
backend/app/api/: __init__.py
backend/app/api/routes/: chat.py  hcp.py  health.py  interactions.py
backend/app/db/: database.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: schemas.py
backend/app/services/: interaction_service.py  llm_service.py
backend/langgraph_workflows/: graph.py  state.py
backend/langgraph_workflows/tools/: all_tools.py
frontend/: Dockerfile  package.json  tsconfig.json
frontend/src/: App.tsx  index.css
frontend/src/components/ai-chat/: ChatPanel.tsx
frontend/src/components/common/: ErrorBoundary.tsx  LoadingSpinner.tsx  SuccessMessage.tsx
frontend/src/components/forms/: InteractionForm.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/components/pages/: Dashboard.tsx  InteractionDetails.tsx  InteractionHistory.tsx  LogInteraction.tsx  Settings.tsx
frontend/src/redux/: store.ts
frontend/src/redux/slices/: chatSlice.ts  hcpSlice.ts  interactionSlice.ts  uiSlice.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
