[build-backend "backend.commands.build"]
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
name = "ai-crm-hcp-backend"
version = "1.0.0"
description = "AI-First CRM HCP Module Backend"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
pydantic = "^2.4.2"
python-dotenv = "^1.0.0"
langchain = "^0.1.1"
langchain-groq = "^0.0.10"
langgraph = "^0.0.20"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.9.0"
flake8 = "^6.1.0"
